infrastructure/configs/external-dns/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-dns-proxmox-endpointslice
  namespace: external-dns
  labels:
    kubernetes.io/service-name: external-dns-proxmox-service
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.1.2
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-dns-pihole-primary-endpointslice
  namespace: external-dns
  labels:
    kubernetes.io/service-name: external-dns-pihole-primary-service
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 192.168.1.10
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-dns-pihole-secondary-endpointslice
  namespace: external-dns
  labels:
    kubernetes.io/service-name: external-dns-pihole-secondary-service
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 192.168.1.11
