infrastructure/configs/external-dns/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns-proxmox-service
  namespace: external-dns
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns-pihole-primary-service
  namespace: external-dns
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-dns-pihole-secondary-service
  namespace: external-dns
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
